# mock-robot

./: README.md  pyproject.toml  robot.py
pyro/: client.py  server.py
rpyc/: client.py  server.py  test_client.py  test_server.py
xml/: server.py
